@@ -264,7 +264,7 @@ $wgUrlProtocols = array(
 	'ftp://',
 	'irc://',
 	'gopher://',
-	'telnet://', // Well if we're going to support the above.. -ævar
+	'telnet://', // Well if we're going to support the above.. -Ã¦var
 	'nntp://', // @bug 3808 RFC 1738
 	'worldwind://',
 	'mailto:',
@@ -1062,6 +1062,7 @@ $wgGroupPermissions['sysop']['createaccount']   = true;
 $wgGroupPermissions['sysop']['delete']          = true;
 $wgGroupPermissions['sysop']['deletedhistory'] 	= true; // can view deleted history entries, but not see or restore the text
 $wgGroupPermissions['sysop']['editinterface']   = true;
+$wgGroupPermissions['sysop']['editusercssjs']   = true;
 $wgGroupPermissions['sysop']['import']          = true;
 $wgGroupPermissions['sysop']['importupload']    = true;
 $wgGroupPermissions['sysop']['move']            = true;
@@ -2133,7 +2134,7 @@ $wgBrowserBlackList = array(
 	'/^Mozilla\/4\.[^ ]+ [^(]*?\((?!compatible).*; [UIN]/',
 	
 	/**
-	 * MSIE on Mac OS 9 is teh sux0r, converts þ to <thorn>, ð to <eth>, Þ to <THORN> and Ð to <ETH>
+	 * MSIE on Mac OS 9 is teh sux0r, converts Ã¾ to <thorn>, Ã° to <eth>, Ãž to <THORN> and Ã to <ETH>
 	 *
 	 * Known useragents:
 	 * - Mozilla/4.0 (compatible; MSIE 5.0; Mac_PowerPC)
